# rosetta-serve

./: Cargo.toml  README.md  clippy.toml  deny.toml
agent/: intent-card.json
src/: error.rs  lib.rs  main.rs  negotiate.rs  routes.rs  sparql.rs  store.rs
tests/: acceptance_ac1.rs  acceptance_ac2.rs  acceptance_ac3.rs  acceptance_ac4.rs  acceptance_ac5.rs  acceptance_ac6.rs  acceptance_ac7.rs  acceptance_ac8.rs  proptest_invariants.rs
