[package]
name = "rosetta-serve"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Dereferenceable IRIs and SPARQL 1.1 Protocol endpoint over the oxigraph lattice store"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "rosetta-serve"
path = "src/main.rs"

[lib]
name = "rosetta_serve"
path = "src/lib.rs"

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unused_must_use = "deny"
unreachable_pub = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
indexing_slicing = "warn"
mem_forget = "deny"
dbg_macro = "deny"
print_stdout = "warn"
print_stderr = "warn"
module_name_repetitions = "allow"
missing_errors_doc = "warn"
missing_panics_doc = "warn"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "debuginfo"
panic = "abort"

[dependencies]
axum = { version = "0.8", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
oxigraph = "0.4"
oxrdfio = "0.1"
sigpipe = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
serde_urlencoded = "0.7"
http-body-util = "0.1"

[dev-dependencies]
tempfile = "3"
proptest = "1"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
serde_urlencoded = "0.7"
